--- a/pwm/supplemental/history.txt
+++ b/pwm/supplemental/history.txt
@@ -10,10 +10,11 @@ v1.4.3
 ---
 + Improved handling of servlet container clustering and session pausing
 
-* Refined password strength meter to allow full strength, and to be more permissive
+* Refined password strength meter to allow full strength to be reached, and to be more permissive
 * Enhanced SetupResponses to show select lists when challenge.randomStyle=SETUP and there are no user defined random challenges
 * Tuned ajax communications to decrease request traffic.
 * Added "eventLog.localDbMaxAge" setting to control age of pwmDB event log storage
+* Added "ldapPromiscuousSSL" setting instead of using "autocert" param in the ldap server url configuration
 
 - Fixed bug where "previously used" error incorrectly results in unknown error when using non-nmas password method (defect #51)
 - Removed setting "passwordSetMethod", for edirectory, this is replaced by "ldap.edirectory.enableNmas"
@@ -23,6 +24,7 @@ v1.4.3
 - Renamed "password.readEdirectoryPasswordPolicy" setting to "ldap.edirectory.readPasswordPolicies"
 - Replaced "authUsingBind" setting with "ldap.edirectory.alwaysUseProxy" setting
 - Fixed bug where newer Client32 clients forced users to configure responses after PWM saves responses using nmas (defect #53)
+- Refactored ant build.xml script to accomedate new layout used in google project svn
 
 
 v1.4.2 (7/23/2009) build 842
