--- a/pwm/servlet/src/password/pwm/config/Messages.properties
+++ b/pwm/servlet/src/password/pwm/config/Messages.properties
@@ -33,7 +33,7 @@ Password_NotEnoughLower=New password does not have enough lower case letters
 Password_NotEnoughSpecial=New password does not have enough symbol (non alpha-numeric) characters
 Password_NotEnoughUnique=New password does not have enough unique characters
 Password_TooManyRepeat=New password has too many repeating characters
-Password_TooManySpecial=New password has too many symbol (non alpha-numeric) characters
+Password_TooManySpecial=New password has too many special (non letter or number) characters
 Password_TooManyAlpha=New password has too many letters
 Password_TooManyNumeric=New password has too many numbers
 Password_TooManyLower=New password has too many lower case letters
@@ -52,6 +52,7 @@ Password_LastIsSpecial=The last character must not be a symbol (non alpha-numeri
 Password_HistoryFull=New password history is full
 Password_MeetsRules=New password accepted
 Password_TooSoon=Not enough time has passed since last password change
+Password_UsingDisallowedValue=New password is using a value that is not allowed
 
 Requirement_MinLength=Must be at least %field% character long.
 Requirement_MinLengthPlural=Must be at least %field% characters long.
@@ -99,6 +100,7 @@ Requirement_CaseSensitive=Password is case sensitive.
 Requirement_NotCaseSensitive=Password is not case sensitive.
 Requirement_MinimumFrequency=Can be changed no more often then once every %field%.
 Requirement_ADComplexity=Must have at least three types of the following characters: <ul><li>Uppercase (A-Z)</li><li>Lowercase (a-z)</li><li>Number (0-9)</li><li>Symbol (!, #, $, etc.)</li></ul>
+Requirement_UniqueRequired=New password may not have been used previously.
 
 Error_WrongAnswer=One or more responses are not correct
 Error_WrongPassword=The username or password is not valid
