--- a/pwm/servlet/src/password/pwm/config/Messages.properties
+++ b/pwm/servlet/src/password/pwm/config/Messages.properties
@@ -133,7 +133,7 @@ Error_MissingRequiredResponse=One or more required responses are missing.  Pleas
 Error_MissingRandomResponse=One or more random responses are missing.  Please complete an additional random response.
 Error_BadCaptchaResponse=Incorrect verification code, please try again.
 Error_CaptchaAPIError=An error occured while validating captcha response.  Please close your brower and try again.  If this error occurs repeatedly contact your helpdesk.
-
+Error_InvalidConfig=The PWM configuration is missing or invalid.  Check the error log.
 
 Error_FieldRequired=%field% is required
 Error_FieldNotANumber=%field% must be a number
