--- a/pwm/servlet/src/password/pwm/config/Messages.properties
+++ b/pwm/servlet/src/password/pwm/config/Messages.properties
@@ -38,7 +38,7 @@ Password_TooManyAlpha=New password has too many letters
 Password_TooManyNumeric=New password has too many numbers
 Password_TooManyLower=New password has too many lower case letters
 Password_TooManyUpper=New password has too many upper case letters
-Password_TooManyOldChars=New password contains too many contains to many letters from your old password
+Password_TooManyOldChars=New password contains too many characters from your old password
 Password_TooManyNonAlphaSpecial=New password has too many symbol (non alpha-numeric) characters
 Password_InvalidChar=New password has an invalid character
 Password_RequiredMissing=New password is missing a required character
