--- a/pwm/supplemental/history.txt
+++ b/pwm/supplemental/history.txt
@@ -29,6 +29,9 @@ v1.4.4 developer build
 - Fixed issue with Log4j (issue #7)
 - Refactored ajax calls to use dojo api, and also to resolve issue with incorrect encoding of i18n characters (issue #9)
 - Removed "aggressiveUrlParsing" setting, values for logoutURL/forwardURL now read url encoded values properly
+- Refactored idle counter javascript to be more efficient
+- Changed default location of pwmDB from META-INF to WEB-INF
+
 
 
 
