--- a/pwm/servlet/src/password/pwm/config/Display_nl.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_nl.properties
@@ -114,3 +114,4 @@ Display_CommunicationError=De server wordt niet gevonden.
 Display_StrengthMeter=Wachtwoord sterkte
 Display_Captcha=Voer alstublieft onderstaande verificatiecode in. Het invoeren van deze code beschermt uw account tegen misbruik.
 Display_CapsLockIsOn=CAPS LOCK staat aan
+Button_Logout=Afmelden
