--- a/pwm/supplemental/history.txt
+++ b/pwm/supplemental/history.txt
@@ -7,8 +7,12 @@
 [----------------------------]
 
 
-v1.5.1 -- devbulds
+v1.5.1 -- devbuilds
 ---
++ Added idle timeout warning dialog
++ Added settings to control Admin Alerts for startup, shutdown, config changes, intruder detection, fatal events and daily stats.
++ Added setting to enable/disable session validation
+
 - Fixed bug where forgotten password recovery would fail when no required attributes were configured
 - Fixed bug where forgotten password recovery would fail when DirectoryServer389 server was used
 
