--- a/pwm/supplemental/history.txt
+++ b/pwm/supplemental/history.txt
@@ -7,15 +7,18 @@
 [----------------------------]
 
 
-v1.5.1 -- devbuilds
+v1.5.1 (August 16, 2010) build 975
 ---
 + Added idle timeout warning dialog
 + Added settings to control Admin Alerts for startup, shutdown, config changes, intruder detection, fatal events and daily stats.
 + Added setting to enable/disable session validation
 + Updated random password generator to show multiple randomly generated passwords at once on change password screen
 
+* Improved statistics reliability and performance.
+
 - Fixed bug where forgotten password recovery would fail when no required attributes were configured
 - Fixed bug where forgotten password recovery would fail when DirectoryServer389 server was used
+
 
 v1.5.0 (July 6, 2010) build 959
 ---
