--- a/pwm/supplemental/history.txt
+++ b/pwm/supplemental/history.txt
@@ -6,6 +6,14 @@
 [ ~ partial implementation   ]
 [----------------------------]
 
+v1.5.2 development
+---
++ Added "minimum password strength" setting 
+
+- Fixed issue with LoginContexts setting not being parsed properly
+- Fixed issue where ldap urls could not contain a hyphen
+- Fixed issue where older/corrupt user history attribute would cause a NullPointerException
+
 v1.5.1 (August 16, 2010) build 975
 ---
 + Added idle timeout warning dialog
@@ -49,8 +57,6 @@ v1.5.0 (July 6, 2010) build 959
 - Refactored idle counter javascript to be more efficient
 - Changed default location of pwmDB from META-INF to WEB-INF
 - Removed tabindex html attributes to allow proper tab behavior
-
-
 
 
 v1.4.3 (1/10/2010) build 922
