--- a/pwm/supplemental/history.txt
+++ b/pwm/supplemental/history.txt
@@ -28,6 +28,7 @@ v1.5.2 development
 
 * Modified active user module to write ldap attributes after the first password change subsequent to a successful activate user event. (issue #17)
 * Refactored logging module to more efficiently store log events in the pwmDB
+* Updated setup response screen ajax code to be list 'jittery' like change password screen
 
 - Updated reCaptcha urls and html to new google api 
 - Refactored ExternalPasswordMethod to ExternalChangeMethod java interface
@@ -38,7 +39,7 @@ v1.5.2 development
 - Fixed issue where random generator would sometimes generate really long passwords (especially for complex policies)
 - Resolved issue where SharedHistory would not be purged correctly due to ClassCastException in PwmDBAdaptor
 - Fixed issue where clear button doesn't work on some pages in some browsers
-- Resolved issue where fom buttons were overly wide in ie6/7 
+- Resolved issue where form buttons were overly wide in ie6/7 
 
 v1.5.1 (August 16, 2010) build 975
 ---
