--- a/pwm/servlet/src/password/pwm/config/Message_nl.properties
+++ b/pwm/servlet/src/password/pwm/config/Message_nl.properties
@@ -69,7 +69,7 @@ Requirement_ADComplexity=Moet minimaal drie van de volgende types bevatten: <ul>
 Requirement_UniqueRequired=Nieuwe wachtwoorden mogen niet eerder gebruikt zijn.
 
 Success_PasswordChange=Uw wachtwoord is gewijzigd.
-Success_SetupResponse=De vragen en antwoorden van uw \u201cchallenges\u201d zijn opgeslagen.
+Success_SetupResponse=De beveiligingsvragen en bijbehorende antwoorden zijn opgeslagen.
 Success_Unknown=De bewerking is correct uitgevoerd.
 Success_CreateUser=Uw nieuwe gebruikersaccount is succesvol aangemaakt. Doorloop het verdere proces volledig, of u zult niet in staat zijn om uzelf aan te melden.
 Success_ActivateUser=Uw nieuwe gebruikersaccount is succesvol geactiveerd. Doorloop het verdere proces volledig, of u zult niet in staat zijn om uzelf aan te melden.
@@ -82,4 +82,5 @@ EventLog_RecoverPassword=Vergeten wachtwoord achterhalen
 EventLog_SetupResponses=Wachtwoord antwoorden opstellen
 EventLog_ActivateUser=Gebruiker activeren
 EventLog_UpdateAttributes=Attributen wijzigen
-EventLog_IntruderLockout=Intruder Lockout
+EventLog_IntruderLockout=Indringers uitsluiten
+
