--- a/pwm/servlet/src/password/pwm/config/Display_nl.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_nl.properties
@@ -28,8 +28,9 @@ Field_ConfirmPassword=Bevestig wachtwoord
 Field_Confirm_Prefix=Bevestigen
 Field_User_Supplied_Question=Door de gebruiker te defini\u00ebren vraag
 Field_Option_Select=Selecteer een vraag
+Field_CurrentPassword=Huidig wachtwoord
 
-Button_Login=Inloggen
+Button_Login=Aanmelden
 Button_Reset=Wissen
 Button_ChangePassword=Wachtwoord wijzigen
 Button_Hide=Wachtwoord verbergen
@@ -48,14 +49,19 @@ Button_Verify=Nakijken
 Button_UnlockPassword=Wachtwoord ontsluiten
 Button_ConfirmResponses=Antwoorden bevestigen
 Button_ChangeResponses=Terug
+Button_CheckCode=Code nakijken
+Button_Logout=Afmelden
+Button_Agree=Akkoord
+Button_Cancel=Annuleren
+Button_More=Meer
 
 Title_Login=Aanmelden alstublieft
 Title_ChangePassword=Wachtwoord wijzigen
-Title_SetupResponses=Setup Password Responses
+Title_SetupResponses=Beveiligingsvragen beantwoorden
 Title_SetupRequiredResponses=Verplichte vragen
 Title_SetupRandomResponses=Willekeurige vragen
 Title_ForgottenPassword=Vergeten wachtwoord
-Title_RecoverPassword=Wachtwoord recovery
+Title_RecoverPassword=Wachtwoordherstel
 Title_RecoverRequiredResponses=Verplichte vragen
 Title_RecoverRandomResponses=Willekeurige vragen
 Title_NewUser=Nieuwe gebruiker registreren
@@ -63,16 +69,18 @@ Title_ActivateUser=Gebruiker activeren
 Title_PleaseWait=Even geduld alstublieft
 Title_Error=Fout
 Title_Success=Succes
-Title_UserEventHistory=Gebruikers historie
+Title_UserEventHistory=Gebruikershistorie
 Title_Logout=Afmelden
 Title_UpdateAttributes=Attributen wijzigen
-Title_PasswordStrength=Wachtwoord sterkte
+Title_PasswordStrength=Wachtwoordsterkte
 Title_Shortcuts=Weblinks
-Title_PasswordWarning=Wachtwoord waarschuwing
+Title_PasswordWarning=Wachtwoordwaarschuwing
 Title_Captcha=Verificatie
-Title_ConfirmResponses=Bevestig wachtwoord antwoorden
+Title_ConfirmResponses=Bevestig antwoorden
 Title_UserInformation=Gebruikersinformatie
-
+Title_RandomPasswords=Willekeurige wachtwoorden
+Title_PasswordGuide=Wachtwoordaanwijzingen
+Title_ForgottenUsername=Vergeten gebruikersnaam
 Display_Login=
 Display_PasswordExpired=Uw wachtwoord is verlopen. U moet een nieuw wachtwoord invoeren.
 Display_ChangePassword=<p>Wijzig alstublieft uw wachtwoord. Houd uw wachtwoord veilig en schrijf het nooit op! Nadat u uw nieuwe wachtwoord heeft ingevoerd kunt u op de knop \u201cWachtwoord wijzigen\u201d klikken.</p><p>Uw wachtwoord moet aan de volgende eisen voldoen:</p>
@@ -80,10 +88,11 @@ Display_CheckingPassword=Wachtwoord valideren....
 Display_CheckingResponses=Antwoorden valideren....
 Display_PleaseWait=Even geduld alstublieft...
 Display_PasswordChangedTo=Het wachtwoord wordt gewijzigd naar:
-Display_SetupResponses=<p>Indien u uw wachtwoord vergeet, is het mogelijk om deze terug te halen door het beantwoorden van vragen waarvan alleen u het antwoord weet.</p><p>Selecteer alstublieft de vragen en antwoorden die kunnen worden gebruikt om uw identiteit te verifi\u00ebren als u uw wachtwoord bent vergeten. Omdat de antwoorden op deze vragen toegang kunnen verlenen tot uw account dient u antwoorden te geven die niet gemakkelijk door anderen kunnen worden geraden of ontdekt.</p>
+Display_SetupResponses=<p>Indien u uw wachtwoord vergeet, is het mogelijk om dit te herstellen door het beantwoorden van vragen waarvan alleen u het antwoord weet.</p><p>Selecteer alstublieft de vragen en antwoorden die kunnen worden gebruikt om uw identiteit te verifi\u00ebren als u uw wachtwoord bent vergeten. Omdat de antwoorden op deze vragen toegang kunnen verlenen tot uw account dient u antwoorden te geven die niet gemakkelijk door anderen kunnen worden geraden of ontdekt.</p>
 Display_ConfirmResponses=Wees er zeker van dat de vragen en antwoorden correct zijn. Controleer de spelling. Indien u uw wachtwoord bent vergeten dient u de antwoorden exact gelijk in te voeren.
-Display_SetupRandomResponses=De beheerder wenst dat u antwoord geeft op deze vragen. Indien u uw wachtwoord vergeten bent, moet u antwoord geven op tenminste %1% van deze vragen om uw wachtwoord terug te halen.
-Display_ForgottenPassword=Als u uw wachtwoord vergeten bent dient u de aanwijzingen te volgen om uw wachtwoord te resetten. Indien u nog geen antwoorden heeft opgegeven, bent u niet in staat om dit proces te voltooien. U dient dan contact op te nemen met de helpdesk.<p/>Voer uw gebruikersnaam in om te beginnen.
+Display_SetupRequiredResponses=De beheerder wenst dat u antwoord geeft op deze vragen. Indien u uw wachtwoord vergeten bent, moet u antwoord geven op al deze vragen om uw wachtwoord te herstellen.
+Display_SetupRandomResponses=De beheerder wenst dat u antwoord geeft op deze vragen. Indien u uw wachtwoord vergeten bent, moet u antwoord geven op tenminste %1% van deze vragen om uw wachtwoord te herstellen.
+Display_ForgottenPassword=Als u uw wachtwoord vergeten bent dient u de aanwijzingen te volgen om uw wachtwoord te herstellen. Indien u nog geen antwoorden heeft opgegeven, bent u niet in staat om dit proces te voltooien. U dient dan contact op te nemen met de helpdesk.<p/>Voer uw gebruikersnaam in om te beginnen.
 Display_RecoverPassword=Beantwoord alstublieft de volgende vragen. Als u deze vragen correct beantwoord wordt u in staat gesteld om uw wachtwoord te wijzigen.
 Display_RecoverRequiredResponses=Deze vragen worden door de beheerder afgedwongen.
 Display_RecoverRandomResponses=U moet de volgende vragen beantwoorden om verder te gaan.
@@ -109,9 +118,27 @@ Display_Second=seconde
 Display_Seconds=seconden
 Display_UpdateAttributes=Actualiseer alstublieft de volgende gegevens:
 Display_AutoGeneratedPassword=Genereer een nieuw wachtwoord
+Display_ShowPasswordGuide=Wachtwoordaanwijzingen
 Display_Shortcuts=Selecteer een van onderstaande links om verder te gaan.
-Display_CommunicationError=De server wordt niet gevonden.
-Display_StrengthMeter=Wachtwoord sterkte
+Display_CommunicationError=Er is geen verbinding met de server mogelijk. Ga verder indien gereed.
+Display_StrengthMeter=Wachtwoordsterkte
 Display_Captcha=Voer alstublieft onderstaande verificatiecode in. Het invoeren van deze code beschermt uw account tegen misbruik.
 Display_CapsLockIsOn=CAPS LOCK staat aan
-Button_Logout=Afmelden
+Display_LeaveDirtyPasswordPage=Indien u deze pagina verlaat, wordt uw wachtwoord niet gewijzigd.
+Display_PasswordStrengthLow=Sterkte: <b>Zwak</b>
+Display_PasswordStrengthMedium=Sterkte: <b>Goed</b>
+Display_PasswordStrengthHigh=Sterkte: <b>Sterk</b>
+Display_IdleWarningTitle=Timeout na inactiviteit
+Display_IdleWarningMessage=Uw sessie staat op het punt om te verlopen. Klik op een willekeurige plaats op de pagina om door te gaan.
+Display_PasswordGeneration=De volgende wachtwoorden zijn willekeurig gegenereerd. De wachtwoorden \
+  zijn gebaseerd op echte woorden om ze eenvoudig te kunnen onthouden, maar aangepast om ze moeilijk te kunnen raden.
+Display_PasswordPrompt=Typ alstublieft uw nieuwe wachtwoord
+Display_ResponsesPrompt=Voer uw antwoorden op de beveilingingsvragen in
+
+Tooltip_PasswordStrength=De wachtwoordsterktemeter geeft aan hoe eenvoudig het is om uw<br/> wachtwoord te raden. \
+  Probeer het volgende om uw wachtwoord sterker te maken:\
+  <ul><li>Maak het wachtwoord langer</li>\
+  <li>Herhaal de letters en cijfers niet</li>\
+  <li>Gebruik hoofd- en kleine letters door elkaar</li>\
+  <li>Voeg cijfers toe</li>\
+  <li>Voeg speciale tekens toe</li></ul>
