--- a/pwm/servlet/src/password/pwm/config/Display_nl.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_nl.properties
@@ -80,7 +80,22 @@ Title_ConfirmResponses=Bevestig antwoorden
 Title_UserInformation=Gebruikersinformatie
 Title_RandomPasswords=Willekeurige wachtwoorden
 Title_PasswordGuide=Wachtwoordaanwijzingen
-Title_ForgottenUsername=Vergeten gebruikersnaam
+Title_ForgottenUsername=Vergeten gebruikersnaam
+Title_Admin=Beheer
+
+Long_Title_Main_Menu=Hoofdmenu van wachtwoordzelfbediening. Hier kunt u uw huidige wachtwoord wijzigen, een vergeten wachtwoord herstellen of andere wachtwoordgerelateerde activiteiten uitvoeren.
+Long_Title_ChangePassword=Wijzig uw huidige wachtwoord.
+Long_Title_ForgottenPassword=Herstel uw vergeten wachtwoord. Als uw eerder uw beveiligingsvragen heeft beantwoord, kunt u daarmee uw wachtwoord herstellen.
+Long_Title_SetupResponses=Beantwoord de beveiligingsvragen. Deze geheime vragen stellen u in staat om uw wachtwoord te herstellen indien u het vergeet.
+Long_Title_ActivateUser=Activeer een voorgeconfigureerde gebruiker en stel een nieuw wachtwoord in.
+Long_Title_NewUser=Registreer een nieuwe gebruiker.
+Long_Title_UpdateAttributes=Wijzig uw informatie.
+Long_Title_UserEventHistory=Gebruikershistorie inzien.
+Long_Title_Shortcuts=Persoonlijke weblinks.
+Long_Title_UserInformation=Informatie over uw wachtwoord en wachtwoordbeleid.
+Long_Title_Admin=PWM beheerfuncties
+Long_Title_Logout=Afmelden van de PWM wachtwoordzelfbediening.
+
 Display_Login=
 Display_PasswordExpired=Uw wachtwoord is verlopen. U moet een nieuw wachtwoord invoeren.
 Display_ChangePassword=<p>Wijzig alstublieft uw wachtwoord. Houd uw wachtwoord veilig en schrijf het nooit op! Nadat u uw nieuwe wachtwoord heeft ingevoerd kunt u op de knop \u201cWachtwoord wijzigen\u201d klikken.</p><p>Uw wachtwoord moet aan de volgende eisen voldoen:</p>
