--- a/pwm/servlet/src/password/pwm/config/Display_de.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_de.properties
@@ -40,6 +40,7 @@ Button_Activate=Aktivieren
 Button_Continue=Weiter
 Button_CloseWindow=Fenster schlie\u00dfen
 
+Title_MainPage=Hauptseite
 Title_Login=Bitte melden Sie sich an
 Title_ChangePassword=Passwort \u00e4ndern
 Title_SetupResponses=Passworthinweise eingeben
