--- a/pwm/servlet/src/password/pwm/config/Display_fr.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_fr.properties
@@ -41,6 +41,7 @@ Button_Continue=Continuer
 Button_CloseWindow=Fermer la fen\u00eatre
 Button_Verify=Vérifiez
 
+Title_MainPage=Page principale
 Title_Login=Veuillez vous connecter
 Title_ChangePassword=Modifier le mot de passe
 Title_SetupResponses=Configurer des indices de mot de passe
