--- a/pwm/servlet/src/password/pwm/config/Display_nl.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_nl.properties
@@ -55,6 +55,7 @@ Button_Agree=Akkoord
 Button_Cancel=Annuleren
 Button_More=Meer
 
+Title_MainPage=Hoofdpagina
 Title_Login=Aanmelden alstublieft
 Title_ChangePassword=Wachtwoord wijzigen
 Title_SetupResponses=Beveiligingsvragen beantwoorden
@@ -108,18 +109,19 @@ Display_ConfirmResponses=Wees er zeker van dat de vragen en antwoorden correct z
 Display_SetupRequiredResponses=De beheerder wenst dat u antwoord geeft op deze vragen. Indien u uw wachtwoord vergeten bent, moet u antwoord geven op al deze vragen om uw wachtwoord te herstellen.
 Display_SetupRandomResponses=De beheerder wenst dat u antwoord geeft op deze vragen. Indien u uw wachtwoord vergeten bent, moet u antwoord geven op tenminste %1% van deze vragen om uw wachtwoord te herstellen.
 Display_ForgottenPassword=Als u uw wachtwoord vergeten bent dient u de aanwijzingen te volgen om uw wachtwoord te herstellen. Indien u nog geen antwoorden heeft opgegeven, bent u niet in staat om dit proces te voltooien. U dient dan contact op te nemen met de helpdesk.<p/>Voer uw gebruikersnaam in om te beginnen.
-Display_RecoverPassword=Beantwoord alstublieft de volgende vragen. Als u deze vragen correct beantwoord wordt u in staat gesteld om uw wachtwoord te wijzigen.
+Display_RecoverPassword=Beantwoord alstublieft de volgende vragen. Als u deze vragen correct beantwoordt wordt u in staat gesteld om uw wachtwoord te wijzigen.
 Display_RecoverRequiredResponses=Deze vragen worden door de beheerder afgedwongen.
 Display_RecoverRandomResponses=U moet de volgende vragen beantwoorden om verder te gaan.
 Display_RecoverPasswordChoices=Uw account is geblokkeerd wegens te veel foutieve aanmeldpogingen. U kunt verder gaan door uw account te deblokkeren of door uw wachtwoord te wijzigen.
 Display_RecoverChoiceUnlock=Deblokkeer uw account. Als u uw wachtwoord weet, kunt u uw account deblokkeren door deze optie te selecteren. Uw wachtwoord wordt dan niet gewijzigd.
 Display_RecoverChoiceReset=Een nieuw wachtwoord zetten. Als u uw wachtwoord vergeten bent en een nieuwe wilt maken, klik dan hier. Uw account wordt tevens gedeblokkeerd als u een nieuw wachtwoord maakt.
+Display_RecoverEnterCode=Om uw identiteit te controleren is er een beveiligingscode aan u verzonden. Vul hier de veiligheidscode in.
 Display_NewUser=Vul dit formulier in om een nieuw account aan te maken. Nadat u het formulier heeft ingevuld kunt u een wachtwoord instellen en is uw nieuwe account gereed.</p> Zorg er voor dat u het proces volledig doorloopt, of uw nieuwe account kan onbruikbaar worden.
 Display_ActivateUser=Om uw identiteit te bevestigen dient u de volgende informatie in te voeren. Deze informatie wordt gebruikt om uw account te lokaliseren en te activeren.</p> Zorg er voor dat u het proces volledig doorloopt, of uw nieuwe account kan onbruikbaar worden.
 Display_PleaseWaitBody=Uw wachtwoord wordt gewijzigd. Dit proces kan enige minuten duren. Even geduld alstublieft.
 Display_ErrorBody=Er is een fout opgetreden. Sluit alstublieft uw browser en probeer het later nog een keer. Als deze fout vaker voorkomt dient u contact op te nemen met de helpdesk.
 Display_UserEventHistory=Deze pagina laat uw wachtwoord historie zien. Enkel acties verricht via dit programma worden getoond. De tijden worden getoond in de %1% tijdzone.
-Display_Logout=<b>U bent nu uitgelogd.</b><p/>Sluit alstublieft alle browser vensters voordat u opnieuw probeert in te loggen.
+Display_Logout=<b>U bent nu uitgelogd.</b><p/>Sluit alstublieft alle browservensters voordat u opnieuw probeert in te loggen.
 Display_PasswordWarn=Uw wachtwoord zal binnenkort verlopen.  Wijzig uw wachtwoord zo spoedig mogelijk om problemen te voorkomen. Uw wachtwoord zal verlopen op %1%.
 Display_PasswordNoExpire=Uw wachtwoord verloopt niet.
 Display_IdleTimeout=Inactiviteitstimer:
