--- a/pwm/supplemental/i18n/Display_nl-colloquial.properties
+++ b/pwm/supplemental/i18n/Display_nl-colloquial.properties
@@ -55,6 +55,7 @@ Button_Agree=Akkoord
 Button_Cancel=Annuleren
 Button_More=Meer
 
+Title_MainPage=Hoofdpagina
 Title_Login=Aanmelden alstublieft
 Title_ChangePassword=Wachtwoord wijzigen
 Title_SetupResponses=Beveiligingsvragen beantwoorden
@@ -114,6 +115,7 @@ Display_RecoverRandomResponses=Je moet de volgende vragen beantwoorden om verder
 Display_RecoverPasswordChoices=Je account is geblokkeerd wegens te veel foutieve aanmeldpogingen. Je kunt verder gaan door je account te deblokkeren of door je wachtwoord te wijzigen.
 Display_RecoverChoiceUnlock=Deblokkeer je account. Als je je wachtwoord weet, kunt je je account deblokkeren door deze optie te selecteren. Je wachtwoord wordt dan niet gewijzigd.
 Display_RecoverChoiceReset=Een nieuw wachtwoord zetten. Als je je wachtwoord vergeten bent en een nieuw wachtwoord wilt maken, klik dan hier. Je account wordt tevens gedeblokkeerd als je een nieuw wachtwoord maakt.
+Display_RecoverEnterCode=Om je identiteit te controleren is er een beveiligingscode aan jou verzonden. Vul hier de veiligheidscode in.
 Display_NewUser=Vul dit formulier in om een nieuw account aan te maken. Nadat je het formulier hebt ingevuld kun je een wachtwoord instellen en is je nieuwe account gereed.</p> Zorg er voor dat je het proces volledig doorloopt, of je nieuwe account kan onbruikbaar worden.
 Display_ActivateUser=Om je identiteit te bevestigen dien je de volgende informatie in te voeren. Deze informatie wordt gebruikt om je account te lokaliseren en te activeren.</p> Zorg er voor dat je het proces volledig doorloopt, of je nieuwe account kan onbruikbaar worden.
 Display_PleaseWaitBody=Je wachtwoord wordt gewijzigd. Dit proces kan enige minuten duren. Even geduld alsjeblieft.
