--- a/pwm/servlet/src/password/pwm/config/Display_cs.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_cs.properties
@@ -40,6 +40,8 @@ Button_Activate=Aktivovat
 Button_Continue=Pokra\u010dovat
 Button_CloseWindow=Zav\u0159\u00edt okno
 Button_Update=Aktualizovat
+Button_Cancel=Zru\u0161it
+Button_More=V\u00edce
 
 Title_Login=P\u0159ihlaste se
 Title_ChangePassword=Zm\u011bnit heslo
