--- a/pwm/servlet/src/password/pwm/config/Display_de.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_de.properties
@@ -39,6 +39,8 @@ Button_Create=Erzeugen
 Button_Activate=Aktivieren
 Button_Continue=Weiter
 Button_CloseWindow=Fenster schlie\u00dfen
+Button_Cancel=Abbrechen
+Button_More=Mehr
 
 Title_MainPage=Hauptseite
 Title_Login=Bitte melden Sie sich an
