--- a/pwm/servlet/src/password/pwm/config/Display_es.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_es.properties
@@ -39,6 +39,8 @@ Button_Create=Crear
 Button_Activate=Activar
 Button_Continue=Continuar
 Button_CloseWindow=Cerrar ventana
+Button_Cancel=Cancelar
+Button_More=M\u00e1s informaci\u00f3n
 
 Title_Login=Por favor con\u00e9ctese
 Title_ChangePassword=Cambiar clave
