--- a/pwm/servlet/src/password/pwm/config/Display_fr.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_fr.properties
@@ -40,6 +40,9 @@ Button_Activate=Activer
 Button_Continue=Continuer
 Button_CloseWindow=Fermer la fen\u00eatre
 Button_Verify=Vérifiez
+Button_Cancel=Annuler
+Button_More=Plus
+
 
 Title_MainPage=Page principale
 Title_Login=Veuillez vous connecter
