--- a/pwm/servlet/src/password/pwm/config/Display_de.properties
+++ b/pwm/servlet/src/password/pwm/config/Display_de.properties
@@ -62,7 +62,7 @@ Title_Logout=Abmeldung
 Title_PasswordStrength=Passwortst\u00e4rke
 
 Display_PasswordExpired=Ihr Passwort ist abgelaufen. Sie m\u00fcssen jetzt ein neues Passwort einrichten
-Display_ChangePassword=Geben Sie bitte ein neues Passwort ein und klicken Sie auf die Schaltfl\u00e4che "Passwort \u00e4ndern". Falls Sie nicht umhinkommen das neue Passwort aufzuschreiben, verwahren Sie es an einem sicheren Ort.<br>
+Display_ChangePassword=Geben Sie bitte ein neues Passwort ein und klicken Sie auf die Schaltfl\u00e4che 'Passwort \u00e4ndern'. Falls Sie nicht umhinkommen das neue Passwort aufzuschreiben, verwahren Sie es an einem sicheren Ort.<br>
 Display_CheckingPassword=Passwortpr\u00fcfung\u2026
 Display_PleaseWait=Bitte warten \u2026
 Display_PasswordChangedTo=Die Passwortfelder wurden ge\u00e4ndert zu:
