--- a/pwm/servlet/src/password/pwm/error/PwmError_nl.properties
+++ b/pwm/servlet/src/password/pwm/error/PwmError_nl.properties
@@ -54,6 +54,10 @@ Password_HistoryFull=De geschiedenis voor nieuwe wachtwoorden is vol
 Password_MeetsRules=Het nieuwe wachtwoord is geaccepteerd
 Password_TooSoon=Er is niet genoeg tijd verlopen sinds de vorige keer dat het wachtwoord is aangepast
 Password_UsingDisallowedValue=Het nieuwe wachtwoord gebruikt een waarde die niet is toegestaan
+Password_TooWeak=Het wachtwoord is te eenvoudig.  Probeer meer cijfers, leestekens en hoofd- en kleine letters toe te voegen.
+Password_TooManyMonAlpha=Het nieuwe wachtwoord heeft teveel niet alfanumerieke tekens.
+Password_NotEnoughNonAlpha=Het nieuwe wachtwoord heeft niet genoeg niet alfanumerieke tekens.
+Password_UnknownValidation=Het wachtwoord voldoet niet aan de eisen.  Probeer een ander wachtwoord.
 
 Error_WrongAnswer=\u00c9\u00e9n of meer antwoorden zijn incorrect.
 Error_WrongPassword=De gebruikersnaam of het wachtwoord is incorrect.
@@ -87,6 +91,13 @@ Error_MissingRandomResponse=\u00c9\u00e9n of meer van de antwoorden is niet inge
 Error_BadCaptchaResponse=Foutieve verificatiecode, probeer het nogmaals.
 Error_CaptchaAPIError=Er is een fout opgetreden bij het valideren van de captcha verificatiecode.  Herstart alstublieft uw browser en probeer het nog een keer. Als de fout zich opnieuw voordoet kunt u contact opnemen met de helpdesk
 Error_InvalidConfig=De PWM configuratie ontbreekt of is niet in orde. Bekijk de error log.
+Error_InvalidFormID=Uw browsersessie is ongeldig of verlopen.  Sluit uw browser en probeer het opnieuw.
+Error_MissingNamingAttr=Het naamgevende attribuut ontbreekt.  Neem contact op met de beheerder.
+Error_TokenMissingContact=Er is geen contactinformatie voor uw account.  Neem contact op met de beheerder.
+Error_TokenIncorrect=Ongeldige code, probeer het opnieuw.
+Error_BadCurrentPassword=Het huidige wachtwoord is niet juist, probeer het opnieuw.
+Error_Closing=De bewerking kon niet worden voltooid, omdat de applicatie aan het afsluiten is.
+Error_Missing_GUID=Kan geen globaal unieke identificatie (GUID) voor de gebruiker vinden. Neem contact op met de beheerder.
 
 Error_FieldRequired=%field% is verplicht
 Error_FieldNotANumber=%field% moet een nummer zijn
@@ -95,3 +106,10 @@ Error_FieldTooShort="%field%" is te kort
 Error_FieldTooLong=%field% is te lang
 Error_FieldDuplicate=%field% wordt reeds gebruikt
 Error_FieldBadConfirm=%field% velden zijn niet gelijk
+
+Error_ConfigUploadSuccess=Het bestand is succesvol geladen.
+Error_ConfigUploadFailure=Het bestand kon niet geladen worden: %field%
+Error_ConfigSaveSuccess=De instellingen zijn succesvol opgeslagen.  PWM zal worden herstart.  PWM kan tijdens de herstart onbeschikbaar zijn.  Als de herstart mislukt, moet deze handmatig worden uitgevoerd.
+Error_ConfigFormatError=Er bevindt zich een fout in de instellingen: %field%
+Error_ConfigLdapFailure=Er is geen verbinding mogelijk met de LDAP-directoryserver: %field%
+Error_ConfigLdapSuccess=Succesvol verbonden met de LDAP-directoryserver
